feat(dto, config, service): The definition of CORS policies has been improved in accordance with best practices, and profile information has been added to the JWT.